[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["kellan butler <kellanbutler52@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
bs4 = "^0.0.1"
lxml = "^4.7.1"
rake-nltk = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
